fix: Push section header down on small screen

--- a/src/scss/2021/components/_section-header.scss
+++ b/src/scss/2021/components/_section-header.scss
@@ -3,6 +3,11 @@
   line-height: 0.75;
   position: relative;
   margin-bottom: 3rem;
+  margin-top: $fixed-columns-sm;
+  
+  @media (min-width: mq(md)) {
+    margin-top: 0;
+  }
 
   &__number {
     position: absolute;
